# livraria2

./: pyproject.toml
config/: settings.py
livraria/migrations/: 0001_initial.py
