[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Eduardo Beckhauser", email = "eduardololamorim235@gmail.com"},
]
dependencies = [
    "django>=4.2.1",
]
requires-python = ">=3.10"
license = {text = "n"}
